--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="heading">
-          <h2>Why Choose Apple Watch</h2>
+          <h2>Lorem ipsum solar</h2>
         </div>
       </div>
     </div>
