--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="row">
       <div class="col-12">
         <div class="heading">
-          <h2 class="text-black">Our Core Features</h2>
+          <h2 class="text-black">Rubrik här</h2>
         </div>
       </div>
       <div class="col-md-4">
@@ -377,7 +377,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-8 text-center mx-auto">
-        <h2 class="subheading text-white">Get Product Updates</h2>
+        <h2 class="subheading text-white">Lorem ipsum dolar</h2>
         <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
         <div class="input-group">
           <!-- <form action="" method="post" class="w-100" name="mc-embedded-subscribe-form" target="_blank">
