--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<div class="col-md-6 align-self-center text-center text-md-left">
 				<div class="block">
 					<h1 class="font-weight-bold mb-4 font-size-60">Kompakt.<br>Kraftfull.<br>Praktisk.</h1>
-					<p class="mb-4">GOhandy är en extremt kompakt, kraftfull, säker och praktisk portabel 11kW elbilsladdare designad för att användas i alla hushålls- eller industriuttag.</p>
+					<p class="mb-4">'Produktnamn' är en extremt liten och lätt bärbar laddstation, designad för att ladda elbilar från hushållsuttag. 'Produktnamn' konverterar vilket uttag som helst till en laddstation med maximala användar- och säkerhetsfunktioner. Den unika designen sparar utrymme, vikt och du använder din vanliga laddkabel för anslutning.</p>
 					<a href="#resellers" class="btn btn-main btn-one">Köp enobi</a>
           <a href="#features" class="btn btn-main btn-two">Läs mer om enobi</a>					
 				</div>
@@ -137,7 +137,7 @@
     <div class="row">
       <div class="col-12">
         <div class="heading text-white">
-          <h2>Hos dessa återförsäljare kan du köpa xxx</h2>
+          <h2>Här kan du köpa 'Produktnamn'</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, modi fugit in veritatis labore perferendis. Minima hic at, nostrum nihil!</p>
         </div>
@@ -388,7 +388,13 @@
               <input type="text" name="" tabindex="-1">
             </div>
           </form> -->
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          
+<div class="table-responsive">
+  <table class="table">
+    ...
+  </table>
+</div>
+          
         </div>
       </div>
     </div>
