--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 <section class="call-to-action section bg-opacity" style="background-image: url('images/PC05X_closeup.png');">
   <div class="container">
     <div class="row">
-      <div class="col-lg-6 col-md-8 text-center mx-auto">
+      <div class="col-lg-6 col-md-8 text-center mx-auto">  
         <h2 class="subheading text-white">Lorem ipsum dolar</h2>
         <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
         <div class="input-group">
@@ -388,15 +388,38 @@
               <input type="text" name="" tabindex="-1">
             </div>
           </form> -->
-          
-<div class="table-responsive">
-  <table class="table">
-    ...
-  </table>
-</div>
-          
+
+
         </div>
       </div>
+
+<div class="col-12">
+<div class="table-responsive">
+  <table class="table text-white">
+    <thead>
+    <tr>
+      <th>hej 1</th>
+      <th>hej 2</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Lorem ipsum dolor</td>
+      <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</td>
+    </tr>
+    <tr>
+      <td>Lorem ipsum dolor</td>
+      <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</td>
+    </tr>
+    <tr>
+      <td>Lorem ipsum dolor</td>
+      <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</td>
+    </tr>
+  </tbody>
+  </table>
+</div>
+</div>
+
     </div>
   </div>
 </section>
