--- a/index.html
+++ b/index.html
@@ -392,8 +392,13 @@
 
         </div>
       </div>
-
 <div class="col-12">
+<p style="text-align:center;">
+  <a class="btn btn-main btn-one" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Link with href
+  </a>
+</p>
+<div class="collapse" id="collapseExample">
 <div class="table-responsive">
   <table class="table text-white">
     <thead>
@@ -417,6 +422,7 @@
     </tr>
   </tbody>
   </table>
+</div>
 </div>
 </div>
 
