--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <a href="index.html" class="mb-4 d-inline-block"> <img src="images/GOhandy-logo.svg" alt="Vex" width="100px"> </a>
+          <a href="index.html" class="mb-4 d-inline-block"> <img src="images/podee_logo.svg" alt="Vex" width="100px"> </a>
           <ul class="list-inline footer-menu">
             
             <li class="list-inline-item">
