--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <header class="navigation sticky-top bg-white">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
-      <a class="navbar-brand" href="index.html"> <img src="images/GOhandy-logo.svg" alt="Vex" width="100px">
+      <a class="navbar-brand" href="index.html"> <img src="images/podee_logo.svg" alt="Vex" width="100px">
       </a>
       <!-- <button class="navbar-toggler p-0 border-0" type="button" data-toggle="collapse" data-target="#navigation"
         aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
