--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 				<div class="block">
 					<h1 class="font-weight-bold mb-4 font-size-60">Kompakt.<br>Kraftfull.<br>Praktisk.</h1>
 					<p class="mb-4">'Produktnamn' är en extremt liten och lätt bärbar laddstation, designad för att ladda elbilar från hushållsuttag. 'Produktnamn' konverterar vilket uttag som helst till en laddstation med maximala användar- och säkerhetsfunktioner. Den unika designen sparar utrymme, vikt och du använder din vanliga laddkabel för anslutning.</p>
-					<a href="#resellers" class="btn btn-main btn-one">Köp enobi</a>
-          <a href="#features" class="btn btn-main btn-two">Läs mer om enobi</a>					
+					<a href="#resellers" class="btn btn-main btn-one">Köp podee</a>
+          <a href="#features" class="btn btn-main btn-two">Läs mer om podee</a>					
 				</div>
 			</div>
 		</div>
