--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Vex HTML Template">
+  <meta name="description" content="podee är en extremt liten och lätt bärbar laddstation, designad för att ladda elbilar från hushållsuttag.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <meta name="author" content="podee">
   <meta name="keywords" content="laddbox,elbil,laddhybrid,portabel,bärbar,laddstation">
@@ -442,7 +442,7 @@
       </div>
   <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
     <img
-      src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
+      src="images/podee_parts.png"
       class="w-100 shadow-1-strong rounded mb-4"
       alt="Boat on Calm Water"
     />
