--- a/index.html
+++ b/index.html
@@ -147,10 +147,7 @@
       <div class="col-12">
       <div class="row justify-content-center">
 
-      <a href=""><article class="clients"><span></span><img src="images/logoipsum-logo-1.svg" alt="logo" /></article></a>
-      <a href=""><article class="clients"><span></span><img src="images/logoipsum-logo-2.svg" alt="logo" /></article></a>
-      <a href=""><article class="clients"><span></span><img src="images/logoipsum-logo-3.svg" alt="logo" /></article></a>
-      <a href=""><article class="clients"><span></span><img src="images/logoipsum-logo-4.svg" alt="logo" /></article></a>
+      <a href="https://evconnect.se" target="_blank"><article class="clients"><span></span><img src="images/evc-white-logotype.svg" alt="evconnect" /></article></a>
 
 
 </div>
