--- a/index.html
+++ b/index.html
@@ -221,7 +221,18 @@
       <div class="col-lg-6 col-md-8 text-center mx-auto">
         <h2 class="subheading text-white">Installation och Grön teknik avdrag</h2>
         <p class="text-white">podee är godkänd för skatteverkets 50% grön teknik avdrag. podee kan användas på befintliga uttag eller så monterar en behörig elektriker ett nytt uttag. Om du har ett befintligt uttag så behöver en behörig elektriker från leverantören besikta uttag, kabelmatning och installation i elcentral.</p>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        
+<div class="col-12">
+      <div class="row justify-content-center">
+
+      <article class="clients"><span>Alternativ ett</span></article>
+      <article class="clients"><span>Alternativ två</span></article>
+      <article class="clients"><span>Alternativ tre</span></article>
+
+
+</div>
+</div>
+
       </div>
     </div>
   </div>
