--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
 <div class="col-12">
       <div class="row justify-content-center">
 
-      <article class="clients"><span>Alternativ ett</span>Alternativ ett</article>
-      <article class="clients"><span>Alternativ två</span>Alternativ två</article>
-      <article class="clients"><span>Alternativ tre</span>Alternativ tre</article>
+      <article class="clients"><p>ett</p></article>
+      <article class="clients"><p>ett</p></article>
+      <article class="clients"><p>ett</p></article>
 
 
 </div>
