--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
   </div>
   <div class="col-12">
 <div class="row justify-content-center">
-<article class="clients"><p>ett</p></article>
-<article class="clients"><p>ett</p></article>
-<article class="clients"><p>ett</p></article>
+<article class="clients"><p class="text-white">ett</p></article>
+<article class="clients"><p class="text-white">ett</p></article>
+<article class="clients"><p class="text-white">ett</p></article>
 </div>
 </div>
 </div>
