--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
         <p class="text-white">podee är godkänd för skatteverkets 50% grön teknik avdrag. podee kan användas på befintliga uttag eller så monterar en behörig elektriker ett nytt uttag. Om du har ett befintligt uttag så behöver en behörig elektriker från leverantören besikta uttag, kabelmatning och installation i elcentral.</p>
 </div>
   </div>
-  <div class="col-12">
-<div class="row justify-content-center">
-<article class="clients"><p class="text-white">ett</p></article>
-<article class="clients"><p class="text-white">ett</p></article>
-<article class="clients"><p class="text-white">ett</p></article>
-</div>
+<div class="col-12">
+  <div class="row justify-content-center">
+    <article class="clients"><p class="text-white"><i class="fa fa-solid fa-screwdriver-wrench"></i>ett</p></article>
+    <article class="clients"><p class="text-white">ett</p></article>
+    <article class="clients"><p class="text-white">ett</p></article>
+  </div>
 </div>
 </div>
 </section>
