--- a/index.html
+++ b/index.html
@@ -223,11 +223,35 @@
         <p class="text-white">podee är godkänd för skatteverkets 50% grön teknik avdrag. podee kan användas på befintliga uttag eller så monterar en behörig elektriker ett nytt uttag. Om du har ett befintligt uttag så behöver en behörig elektriker från leverantören besikta uttag, kabelmatning och installation i elcentral.</p>
 </div>
   </div>
+  <br><br>
 <div class="col-12">
   <div class="row justify-content-center">
-    <article class="clients"><p class="text-white"><i class="fa fa-solid fa-screwdriver-wrench"></i>ett</p></article>
-    <article class="clients"><p class="text-white">ett</p></article>
-    <article class="clients"><p class="text-white">ett</p></article>
+    
+
+
+<article class="clients">
+<div class="mb-40 text-center text-white">
+<i class="fa fa-regular fa-piggy-bank" style="font-size:30px;"></i>
+<br><br>
+<p class="text-white">Installera ett eller flera uttag</p>
+</div>
+</article>
+
+<article class="clients">
+<div class="mb-40 text-center text-white">
+<i class="fa fa-regular fa-piggy-bank" style="font-size:30px;"></i>
+<p class="text-white">Lorem ipsum dolar</p>
+</div>
+</article>
+
+<!-- <article class="clients">
+<div class="mb-40 text-center text-white">
+<i class="fa fa-regular fa-bolt"></i>
+<p class="text-white">Lorem ipsum dolar</p>
+</div>
+</article> -->
+
+
   </div>
 </div>
 </div>
