--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   </div>
 </section>
 
-<section class="call-to-action section bg-opacity" style="background-image: url('images/karta.png');max-width: 100%;">
+<section class="call-to-action section bg-opacity" style="background-image: url('images/karta.png');">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-8 text-center mx-auto">
