--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-8 text-center mx-auto">
         <h2 class="subheading text-white">Installation och Grön teknik avdrag</h2>
-        <p class="text-white">podee är godkänd för skatteverkets 50% grön teknik avdrag. podee kan användas på befintliga uttag eller så monterar en behörig elektriker ett nytt uttag. Om du har ett befintligt uttag så behöver en behörig elektriker från leverantören besikta uttag, kabelmatning och installation i elcentral.</p>
+        <p class="text-white">podee är godkänd för skatteverkets 50% grön teknik avdrag. podee kan användas på befintliga trefasuttag eller så monterar en behörig elektriker ett nytt trefasuttag. Om du har ett befintligt uttag så behöver en behörig elektriker från leverantören besikta uttaget, kabelmatning och installation i elcentral.</p>
 </div>
   </div>
   <br><br>
@@ -570,6 +570,9 @@
 <script src="plugins/slick/slick.min.js"></script>
 
 <script src="js/script.js"></script>
+
+<script id="gorgias-chat-widget-install-v2" src="https://config.gorgias.chat/gorgias-chat-bundle-loader.js?applicationId=18665"></script>
+
 </body>
 </html>
 <footer>
