--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			<div class="col-md-6 align-self-center text-center text-md-left">
 				<div class="block">
 					<h1 class="font-weight-bold mb-4 font-size-60">Kompakt.<br>Kraftfull.<br>Praktisk.</h1>
-					<p class="mb-4">podee är en extremt liten och lätt bärbar laddstation, designad för att ladda elbilar från hushållsuttag. podee konverterar vilket uttag som helst till en laddstation med maximala användar- och säkerhetsfunktioner. Den unika designen sparar utrymme, vikt och du använder din vanliga laddkabel för anslutning.</p>
+					<p class="mb-4">Podee är en extremt liten, bärbar och kraftfull laddstation. Designad för största flexibilitet och användbarhet. Podee ansluts till ett standard eluttag och gör med dess inbyggda säkerhetsfunktioner din laddning säker. Den unika designen sparar utrymme och vikt då du använder en vanlig laddkabel som passar ditt fordon.</p>
 					<a href="#resellers" class="btn btn-main btn-one">Köp podee</a>
           <a href="#features" class="btn btn-main btn-two">Läs mer om podee</a>					
 				</div>
