--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
           <p>Portabel, liten och behändig. Väger endast 1 kg och är 47 cm kort och 7 cm bred.</p>
         </div>
         
-        <div class="mb-40 text-center text-md-left">
+        <!-- <div class="mb-40 text-center text-md-left">
           <i class="fa fa-wifi"></i>
           <h4 class="font-weight-bold mb-2">Uppkopplad</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?</p>
-        </div>
+        </div> -->
         
         <div class="mb-40 text-center text-md-left">
           <i class="fa fa-battery-half"></i>
